2005-12-14  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (octave_stream::invalid_stream_error): Delete.
	* oct-stream.h (octave_stream::stream_ok): Don't fail with error.

2005-12-14  David Bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/regexp.cc: New file.

	* DLD-FUNCTIONS/dispatch.cc: Update tests for string/sq_string 
	differences.

	* error.cc (Vquiet_warning): New variable.
	(vwarning): Use Vquiet_warning to prevent warning output.
	(Fwarning): Include "quiet" option to Fwarning function.
	Assign retval when using "query".  Typo in error message.
	(Flastwarn): Clear warning_state when using Flastwarn to probe warning
	message.

	* ov-struct.cc: Update Fstruct tests for change in error output.

	* Makefile.in: Include regexp when needed with appropriate libraries.

2005-12-13  David Bateman <dbateman@free.fr>

	* Makefile.in: Change references to gplot.l to __gnuplot_raw__.l.
	* DLD-FUNCTIONS/__gnuplot_raw__.l: Rename from DLD-FUNCTIONS/gplot.l.
	Remove all references to deprecated gplot, gsplot, graw, gset and
	gshow functions.
	* help.cc (static help_list keywords[]): Remove gsplot and gplot.

	* ls-oct-ascii.cc (save_three_d):  Don't strip Inf or NaN.
	(save_ascii_data_for_plotting): Ditto.

2005-12-13  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (octave_stream_list::do_insert): Check open state
	of stream in list instead of whether stream state is OK.

2005-12-12  David Bateman  <dbateman@free.fr>

	* OPERATORS/op-struct.cc (transpose): New function.
	(install_struct_ops): Install it.

	* oct-map.cc (Octave_map::transpose): New function.
	* oct-map.h: Provide decl.

2005-12-08  John W. Eaton  <jwe@octave.org>

	* Cell.cc (Cell::column): New function.
	* pt-loop.cc (DO_ND_LOOP): Simplify.
	(simple_for_loop_command::eval): Correctly handle N-d numeric and
	cell arrays when only the first dimension is 0.

2005-12-07  John W. Eaton  <jwe@octave.org>

	* lex.l (NL): Also accept '\r'.

	* error.cc (Vbacktrace_on_warning, warning_options,